--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -59,3 +59,15 @@
 .github-btn:hover {
   background-color: #005fcc;
 }
+@media screen and (max-width: 600px) {
+  .project-card {
+    max-width: 90%;
+    flex: 1 1 90%;
+  }
+}
+@media screen and (max-width: 600px) {
+  .projects-grid {
+    flex-direction: column;
+    align-items: center;
+  }
+}
